# mindbox_geometry_lib

./: .gitignore  README.md  pyproject.toml
geometry/: __init__.py  factory.py  utils.py
geometry/figures/: circle.py  triangle.py
tests/: test_circle.py  test_factory.py  test_triangle.py
