[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry-lib"
version = "0.1.0"
description = "Библиотека для вычисления площадей геометрических фигур"
authors = [{ name="Dary", email="latiennetendresse@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
